[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camap-nordics"
version = "0.1.0"
description = "Interactive map showing CA sovereignty of Nordic and Baltic municipalities"
readme = "README.md"
license = { text = "EUPL-1.2" }
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "stamina>=25.2.0",
    "cryptography>=44.0",
]

[project.scripts]
resolve-domains = "cert_sovereignty.cli:resolve_domains"
scan-certs = "cert_sovereignty.cli:scan_certs"
analyze = "cert_sovereignty.cli:analyze"
update-ccadb = "cert_sovereignty.cli:update_ccadb"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_sovereignty"]

[dependency-groups]
dev = [
    "mypy>=1.9",
    "mypy-extensions>=1.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cert_sovereignty"]
# Omit modules that are not meaningfully unit-testable:
# cli.py  — CLI entry points; tested end-to-end via uv run commands
# log.py  — trivial logging configuration
omit = [
    "src/cert_sovereignty/cli.py",
    "src/cert_sovereignty/log.py",
]

[tool.coverage.report]
show_missing = true
# Network I/O modules (tls.py, dns.py, resolve.py, pipeline.py) require
# mocking or integration tests to reach higher coverage. Unit tests cover
# 100% of pure-logic modules (models, classifier, signatures, constants).
fail_under = 55

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Pydantic v2 frozen models confuse mypy without the plugin; we rely on
# ruff for most type-related lint. Strict mode would require stubs for
# every third-party library (dnspython, cryptography, httpx, stamina).
strict = false
warn_return_any = false    # json.load / r.json() return Any — too noisy
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]
ignore = ["E501"]
